# dnglab

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CONTRIBUTE_SAMPLES.md  CONTRIBUTING_SAMPLES.md  CR3_STATE.md  Cargo.toml  README.md  SUPPORTED_CAMERAS.md  gentestidx.sh  justfile  rawdb_regen_tests.py  rustfmt.toml  update_testdata.sh
embedftp/: Cargo.toml
embedftp/src/: client.rs  codec.rs  command.rs  config.rs  error.rs  ftp.rs  lib.rs  server.rs
fuzz/: .gitignore  Cargo.toml  run
fuzz/src/: decoders.rs  main.rs  metadata.rs
rawler/: .travis.yml  Cargo.toml  README.md
rawler/benches/: convert.rs  demosaic.rs  perf.rs  raw_decoder.rs
rawler/data/: all.toml  cameras.xml  join.rs  lenses.toml
rawler/data/cameras/: join.rs
rawler/data/cameras/apple/: quicktake100.toml  quicktake150.toml
rawler/data/cameras/arri/: alexa.toml  alexa_65.toml  alexa_lf.toml  alexa_mini.toml
rawler/data/cameras/canon/: 1000d.toml  100d.toml  10d.toml  1100d.toml  1200d.toml  1300d.toml  1d.toml  1dm2.toml  1dm2n.toml  1dm3.toml  1dm4.toml  1ds.toml  1dsm2.toml  1dsm3.toml  1dx.toml  1dx_m2.toml  1dxm2.toml  1dxm3.toml  2000d.toml  200d.toml  20d.toml  250d.toml  300d.toml  30d.toml  350d.toml  4000d.toml  400d.toml  40d.toml  450d.toml  500d.toml  50d.toml  550d.toml  5d.toml  5dm2.toml  5dm3.toml  5dm4.toml  5dmk2.toml  5dmk3.toml  5dmk4.toml  5ds.toml  (+143 more)
rawler/data/cameras/epson/: r-d1.toml  r-d1s.toml  r-d1x.toml
rawler/data/cameras/fuji/: dbp_gx680.toml  e550.toml  e900.toml  f550exr.toml  f600exr.toml  f700.toml  f770exr.toml  f900exr.toml  gfx100.toml  gfx100mk2.toml  gfx100rf.toml  gfx100s.toml  gfx100smk2.toml  gfx50r.toml  gfx50s.toml  gfx50smk2.toml  hs10.toml  hs20exr.toml  hs30exr.toml  hs33exr.toml  hs50exr.toml  s1.toml  s100fs.toml  s200exr.toml  s2pro.toml  s3pro.toml  s5000.toml  s5200.toml  s5500.toml  s5600.toml  s5pro.toml  s6500fd.toml  s7000.toml  s9500.toml  s9600.toml  sl1000.toml  x-a1.toml  x-a10.toml  x-a2.toml  x-a20.toml  (+48 more)
rawler/data/cameras/hasselblad/: cf132.toml  cfv-50.toml  cfv.toml  cfv_50.toml  h3d.toml  h4d_40.toml  h4d_50.toml  h5d-50.toml  h5d_40.toml  h5d_50c.toml  h6d_100cms.toml  x1d.toml  x1d2.toml  x2d_100c.toml
rawler/data/cameras/kodak/: dc120.toml  dc40.toml  dc50.toml  dcs1.toml  dcs3.toml  dcs460d.toml  dcs560c.toml  dcs760c.toml  dcs_pro.toml  dcs_pro14n.toml  dcs_pro14nx.toml  dcs_pro_slrc.toml  dcs_pro_slrn.toml  p712.toml  p880.toml  z1015.toml  z981.toml  z990.toml
rawler/data/cameras/leaf/: aptus22.toml  aptus75.toml  aptusII-10R.toml  aptusII-12.toml  credo40.toml  credo50.toml  credo60.toml  credo80.toml
rawler/data/cameras/leica/: c112.toml  cl.toml  clux.toml  digilux2.toml  digilux3.toml  dlux109.toml  dlux3.toml  dlux4.toml  dlux5.toml  dlux7.toml  m10.toml  m10r.toml  m8.toml  m9.toml  m_monochrom.toml  m_monochrom_typ246.toml  m_typ240.toml  q2.toml  q_typ116.toml  sl2.toml  sl_typ601.toml  vlux1.toml  vlux114.toml  vlux4.toml  vlux5.toml  x2.toml
rawler/data/cameras/mamiya/: zd.toml
rawler/data/cameras/minolta/: 5.toml  5d.toml  7.toml  7d.toml  7hi.toml  7i.toml  a1.toml  a2.toml  a200.toml  alpha7.toml  dynax_7d.toml  g600.toml  maxxum_7d.toml
rawler/data/cameras/nikon/: 1aw1.toml  1j1.toml  1j2.toml  1j3.toml  1j5.toml  1s2.toml  1v1.toml  1v2.toml  1v3.toml  b700.toml  coolpix_a.toml  coolpix_a1000.toml  coolpix_b700.toml  coolpix_e8800.toml  coolpix_p1000.toml  coolpix_p330.toml  coolpix_p340.toml  coolpix_p6000.toml  coolpix_p7000.toml  coolpix_p7100.toml  coolpix_p7800.toml  coolpix_p950.toml  coolscan_5000_ed.toml  d1.toml  d100.toml  d1x.toml  d200.toml  d2h.toml  d2hs.toml  d2x.toml  d2xs.toml  d3.toml  d300.toml  (+64 more)
rawler/data/lenses/: README.md
rawler/fuzz/: Cargo.toml
rawler/fuzz/fuzz_targets/: fuzz_bmff_parse.rs  fuzz_ciff_parse.rs  fuzz_decode_full.rs  fuzz_decode_metadata.rs  fuzz_decode_unwrapped.rs  fuzz_get_decoder.rs  fuzz_jfif_parse.rs  fuzz_tiff_parse.rs
rawler/src/: analyze.rs  bitarray.rs  bits.rs  buffer.rs  cfa.rs  envparams.rs  exif.rs  lens.rs  lib.rs  ljpeg92.rs  packed.rs  pixarray.rs  pumps.rs  rawimage.rs  rawsource.rs  tags.rs  tiff.rs  tiles.rs
rawler/src/decoders/: ari.rs  arw.rs  camera.rs  cfa.rs  ciff.rs  cr2.rs  cr3.rs  crw.rs  dcr.rs  dcs.rs  dng.rs  erf.rs  iiq.rs  kdc.rs  mef.rs  mod.rs  mos.rs  mrw.rs  nef.rs  nkd.rs  nrw.rs  orf.rs  pef.rs  qtk.rs  raf.rs  rw2.rs  srw.rs  tfr.rs  tiff.rs  unwrapped.rs  x3f.rs
rawler/src/decompressors/: deflate.rs  jpeg.rs  jpegxl.rs  mod.rs  packed.rs  radc.rs
rawler/src/devtools/: inspector.rs  mod.rs  rawdb.rs
rawler/src/dng/: convert.rs  dngwriter.rs  embedded.rs  jxl_encode_helper.c  jxl_encoder.rs  mod.rs  original.rs  writer.rs
rawler/src/dngencoder/: bytecast.rs  cfa_image.rs  colortype.rs  compression.rs  encoder.rs  error.rs  mod.rs  preview_image.rs  tags.rs  tiff_value.rs  writer.rs
rawler/src/formats/: jfif.rs  mod.rs  tiff.rs  tiff_legacy.rs
rawler/src/imgop/: chromatic_adaption.rs  cielab.rs  develop.rs  fuji_rotate.rs  gamma.rs  math.rs  matrix.rs  mod.rs  raw.rs  spline.rs  srgb.rs  xyz.rs  yuv.rs
rawler/tests/: cameras.rs  fuzz_regression.rs  jpeg_restart.rs  linear_blacklevel.rs  mod.rs  rustfmt.toml  supported_rawdb_sets.txt  supported_sample_sets.txt
rawler/tests/cameras/: mod.rs
rawler/tests/common/: mod.rs
rawler/tests/dng/: mod.rs
rawler/tests/fuzz_corpus/: bmff_moov_nonadvance_oom  bmff_vendor_offset_size_overflow  jfif_app1_infinite_loop  kdc_dc120_src_oob  ljpeg_huff_overfull  lookuptable_delta_add_overflow  lookuptable_u16_sub_overflow  mrw_len_add_overflow  nef_snef_invwb_mul_overflow  orf_pred_mul_overflow  panasonic_v4_zero_dim_expect  pef_huff_shift_underflow  pef_out_write_oob  pump_msb_peek_underflow  raf_offset_add_overflow  srw1_len_sub_underflow  srw1_loffset_oob  srw1_out_index_oob  srw3_basecase_oob  srw3_motion_panic  srw3_refpixel_avg_overflow  tiff_base_offset_add_overflow_jfif  tiff_entry_count_oom_get_decoder  tiff_subifd_empty_offsets  x3f_dir_offset_oob_FOVb
rawler/tests/issues/: mod.rs
rawler/tests/rawdb/: mod.rs
rawler/tests/samples/: mod.rs
(+8593 files in other folders)
