[package]
name = "rawloader"
version = "0.35.4"
authors = ["Pedro Côrte-Real <pedro@pedrocr.net>"]
description = "A library to extract the data from camera raw formats"
documentation = "https://docs.rs/rawloader/"
#homepage = "..."
repository = "https://github.com/pedrocr/rawloader"
license = "LGPL-2.1"
categories = ["multimedia::images"]

build = "data/cameras/join.rs"

[dependencies]
toml = "0.4"
time = "0.1"
enum_primitive = "0.1"
num = "0.2"
lazy_static = "1"
byteorder = "1"
rayon = "1"
itertools = "0.7"
serde = "1"
serde_derive = "1"

[build-dependencies]
glob = "0.2.11"
toml = "0.4.5"
rustc_version = "0.2.3"

[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
opt-level = 3

[[bin]]
name = "benchmark"
doc = false
