[workspace]
members = [
	"bin/dnglab",
	"rawler",
	"embedftp"
]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "warn"
collapsible_if = "allow"

[profile.bench]
opt-level = 3
overflow-checks = false
debug = 0
lto = false

[profile.release]
opt-level = 3
overflow-checks = false
debug = 0
#lto = "fat"

