[package]
name = "embedftp"
version = "0.0.1"
edition = "2021"
authors = ["Guillaume Gomez", "Daniel Vogelbacher"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
bytes = "1.5"
futures = "0.3"
chrono = "0.4"
glob = "0.3"
log = "0.4"

[dev-dependencies]
ftp = "^3.0.1"
