[package]
authors = ["Daniel Vogelbacher <daniel@chaospixel.com>", "Pedro Côrte-Real <pedro@pedrocr.net>"]
categories = ["multimedia::images"]
edition = "2021"
license = "LGPL-2.1"
name = "rawler"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "data/join.rs"

[features]
# This is a developer feature, it enabled deep inspection of algorithm execution stages
inspector = []
samplecheck = []
clap = ["dep:clap"]

[dependencies]
bitstream-io = "2"
byteorder = "1"
enumn = "0.1"
clap = { version = "4.4.0", optional = true }
chrono = "0.4"
hex = "0.4"
image = "0.24"
num_enum = "0.7"
itertools = "0.11"
lazy_static = "1"
libc = "0.2"
libflate = "2.0"
log = "0.4"
md5 = "0.7"
rayon = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
uuid = {version = "1.0", features = ["serde", "v4"]}
tokio = { version = "1.20", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
multiversion = "0.6"
backtrace = "0.3"

[dev-dependencies]
serde_yaml = "0.8"
env_logger = "0.9"
criterion = {version = "0.5", features = ["html_reports"]}

[build-dependencies]
glob = "0.3"
toml = "0.8"
rustc_version = "0.4"

[[bench]]
name = "perf"
harness = false

